kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
    ingressClassName: _{_INCRESS_CLASS_NAME_}_
    rules:
    - host: _{_INGRESS_CONTROLLER_HOSTNAME_}_
      http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - _{_INGRESS_CONTROLLER_HOSTNAME_}_
      secretName: ingress-local-tls
